--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+img {
+    width: 510px;
+    height: 510px;
+    position:relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.container {
+    width: 510px;
+    height: 510px;
+}
+
+.box {
+    width:168px;
+    height:168px;
+    background-color: red;
+    position: fixed;
+    border: 1px solid black;
+}
+
+.box0 {
+    top: 10px;
+    left: 10px;
+}
+
+.box1 {
+    top: 10px;
+    left: 180px;
+}
+
+.box2 {
+    top: 10px;
+    left: 350px;
+}
+
+.box3 {
+    top: 180px;
+    left: 10px;
+}
+
+.box4 {
+    top: 180px;
+    left: 180px;
+}
+
+.box5 {
+    top: 180px;
+    left: 350px;
+}
+
+.box6 {
+    top: 350px;
+    left: 10px;
+}
+
+.box7 {
+    top: 350px;
+    left: 180px;
+}
+
+.box8 {
+    top: 350px;
+    left: 350px;
+}
+
+body {
+    margin: 10px;
 }
